--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html lang="ro">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Pagina mea AI</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #e0e0e0;
+            margin: 40px;
+            text-align: center;
+        }
+        h1 {
+            color: #4caf50;
+        }
+        a {
+            color: #81c784;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .contact {
+            margin-top: 20px;
+            font-size: 1.2em;
+        }
+    </style>
+</head>
+<body>
+    <h1>Bun venit pe pagina mea!</h1>
+    <p>Sunt <strong>Alex Pogacian</strong>, specialist în inteligență artificială și automatizări.</p>
+    <p>Ofer servicii rapide și de calitate pentru crearea de conținut și optimizare AI.</p>
+    <div class="contact">
+        <p>Contactează-mă:</p>
+        <p>Email: <a href="mailto:alex.pogacian@example.com">alex.pogacian@example.com</a></p>
+        <p>Telefon: <a href="tel:+40744123456">+40 744 123 456</a></p>
+    </div>
+</body>
+</html>
